Blender crashes after deleting vertices with Custom Normals #78766

Closed
opened 2020-07-09 15:16:13 +02:00 by Filip Sauer · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Quadro K420/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.77

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-08 20:30, hash: 31bc76ea4e
Worked: official 2.83 release

Short description of error
Blender crashes after deleting vertices.

Exact steps for others to reproduce the error
The crashing blend file
crash.blend
Cut the left part (cut through on) and delete vertices on the right side of the cut (images 1,2). Cut the right part and when trying to delete the vertices on the left of the cut blender crashes. For some reason the exact order of the steps is important else blender doesn't crash.

3.jpg

4.jpg

1.jpg

2.jpg

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Quadro K420/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.77 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-08 20:30, hash: `31bc76ea4e` Worked: official 2.83 release **Short description of error** Blender crashes after deleting vertices. **Exact steps for others to reproduce the error** The crashing blend file [crash.blend](https://archive.blender.org/developer/F8680845/crash.blend) Cut the left part (cut through on) and delete vertices on the right side of the cut (images 1,2). Cut the right part and when trying to delete the vertices on the left of the cut blender crashes. For some reason the exact order of the steps is important else blender doesn't crash. ![3.jpg](https://archive.blender.org/developer/F8680840/3.jpg) ![4.jpg](https://archive.blender.org/developer/F8680839/4.jpg) ![1.jpg](https://archive.blender.org/developer/F8680838/1.jpg) ![2.jpg](https://archive.blender.org/developer/F8680837/2.jpg)
Author

Added subscriber: @cdog

Added subscriber: @cdog
Member

Added subscribers: @angavrilov, @mont29, @lichtwerk

Added subscribers: @angavrilov, @mont29, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Probably caused by 93c8955a72

MLoopNorSpace is NULL here

1  copy_v3_v3                             math_vector_inline.c 63    0x2fd8acf 
2  BKE_lnor_space_custom_data_to_normal   mesh_evaluate.c      697   0x2fdb08b 
3  BM_custom_loop_normals_to_vector_layer bmesh_mesh.c         1921  0x34a33bf 
4  edbm_delete_exec                       editmesh_tools.c     454   0x3cc6063 
5  wm_operator_invoke                     wm_event_system.c    1296  0x338209b 
6  wm_operator_call_internal              wm_event_system.c    1498  0x3382722 
7  WM_operator_name_call_ptr              wm_event_system.c    1546  0x338294c 
8  ui_apply_but_funcs_after               interface_handlers.c 902   0x3efc90c 
9  ui_popup_handler                       interface_handlers.c 10878 0x3f177a6 
10 wm_handler_ui_call                     wm_event_system.c    622   0x33805b5 
11 wm_handlers_do_intern                  wm_event_system.c    2743  0x3385cf0 
12 wm_handlers_do                         wm_event_system.c    2854  0x338611c 
13 wm_event_do_handlers                   wm_event_system.c    3283  0x3387483 
14 WM_main                                wm.c                 475   0x337b77f 
15 main                                   creator.c            532   0x2f3dcae 

CC @angavrilov
CC @mont29

Probably caused by 93c8955a72 MLoopNorSpace is NULL here ``` 1 copy_v3_v3 math_vector_inline.c 63 0x2fd8acf 2 BKE_lnor_space_custom_data_to_normal mesh_evaluate.c 697 0x2fdb08b 3 BM_custom_loop_normals_to_vector_layer bmesh_mesh.c 1921 0x34a33bf 4 edbm_delete_exec editmesh_tools.c 454 0x3cc6063 5 wm_operator_invoke wm_event_system.c 1296 0x338209b 6 wm_operator_call_internal wm_event_system.c 1498 0x3382722 7 WM_operator_name_call_ptr wm_event_system.c 1546 0x338294c 8 ui_apply_but_funcs_after interface_handlers.c 902 0x3efc90c 9 ui_popup_handler interface_handlers.c 10878 0x3f177a6 10 wm_handler_ui_call wm_event_system.c 622 0x33805b5 11 wm_handlers_do_intern wm_event_system.c 2743 0x3385cf0 12 wm_handlers_do wm_event_system.c 2854 0x338611c 13 wm_event_do_handlers wm_event_system.c 3283 0x3387483 14 WM_main wm.c 475 0x337b77f 15 main creator.c 532 0x2f3dcae ``` CC @angavrilov CC @mont29
Philipp Oeser changed title from Blender crashes after deleting vertices to Blender crashes after deleting vertices with Custom Normals 2020-07-09 16:54:36 +02:00

This issue was referenced by 9dbe9a753a

This issue was referenced by 9dbe9a753a54cad83f94ef295b7a8b4350ab9783

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-07-10 16:51:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78766
No description provided.