Fix T78766: Blender crashes after deleting vertices with Custom Normals.

Some core BMesh topology changing functions were not properly tagging
custom normal runtime caches as dirty...